apps/10-home/homeassistant/overlays/dev/dataangel.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
spec:
  template:
    metadata:
      labels:
        vixens.io/sizing.dataangel: V-small
      annotations:
        dataangel.io/bucket: "vixens-dev-homeassistant"
        dataangel.io/sqlite-paths: "/config/home-assistant_v2.db"
        dataangel.io/fs-paths: "/config"
        dataangel.io/s3-endpoint: "http://nas.truxonline.com:30157"
        dataangel.io/deployment-name: "homeassistant"
        dataangel.io/rclone-interval: "60s"
        dataangel.io/metrics-enabled: "true"
        dataangel.io/lock-enabled: "false"
    spec:
