apps/10-home/homeassistant/overlays/dev/ingress.yaml
---
# HTTP -> HTTPS redirect
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-http-redirect
  namespace: homeassistant
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: traefik-global-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: homeassistant.dev.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant-svc
                port:
                  number: 8123
---
# HTTPS with TLS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress
  namespace: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Home Assistant"
    gethomepage.dev/icon: "home-assistant.png"
    gethomepage.dev/group: "Home Automation"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: homeassistant.dev.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant-svc
                port:
                  number: 8123
  tls:
    - hosts:
        - homeassistant.dev.truxonline.com
      secretName: homeassistant-tls-dev
---
# Filebrowser HTTP -> HTTPS redirect
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-fb-http-redirect
  namespace: homeassistant
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: traefik-global-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: homeassistant-fb.dev.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant-svc
                port:
                  number: 8080
---
# Filebrowser HTTPS with TLS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-fb-ingress
  namespace: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Home Assistant File Browser"
    gethomepage.dev/icon: "filebrowser.png"
    gethomepage.dev/group: "Home Automation"
spec:
  ingressClassName: traefik
  rules:
    - host: homeassistant-fb.dev.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant-svc
                port:
                  number: 8080
  tls:
    - hosts:
        - homeassistant-fb.dev.truxonline.com
      secretName: homeassistant-fb-tls-dev
