apps/10-home/homeassistant/overlays/dev/drop-cilium-networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homeassistant
  namespace: homeassistant
$patch: delete
